# attitude-estimation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: accelerometer-data.h  attitude-estimation.h  attitude-estimator.h
sources/: accelerometer-data.cpp  attitude-estimation.cpp  attitude-estimator.cpp
tests/: test-accelerometer-data.cpp  test-attitude-estimator.cpp  test-write-attitude-estimation-file.cpp
